# sam-ubc

./: .gitignore  CMakeLists.txt  README.md  README_CMAKE.md
BOMEX/: grd  prm
CGILS/: S6_CTL_Dec2010.nc  grd  prm
SRC/: advect_all_scalars.f90  domain.f90  grid.f90  hbuf_ent_init.f90  hbuffer.f90  main.f90  params.f90  setparm.f90  stat_moments.f90  statistics.f90  stepout.f90  task_init.f90  tracers.f90  write_fields2D.f90  write_fields3D.f90
SRC/ENTRAINMENT/: calculate_advective_momentum_fluxes.f90  calculate_diffusive_momentum_fluxes.f90  entrainment.f90  romps.f90  tetrahedral_entrainment.f90  tetrahedral_interpolation.f90  tracer_advective_flux3d.f90  tracer_diffusive_flux3d.f90  write_cloud_entrainment_3D.f90  write_core_entrainment_3D.f90
SRC/MICRO_M2005/: microphysics.f90
SRC/MICRO_THOM/: microphysics.f90
UTIL/: CMakeLists.txt
